--- a/setup.cfg
+++ b/setup.cfg
@@ -5,17 +5,17 @@
 
 [metadata]
 name = shitposter3
-description = Add a short description here!
+version = attr: shitposter3.__version__
+description = AI-powered desktop automation framework
 author = nathfavour
-author_email = 116535483+nathfavour@users.noreply.github.com
+author_email = nathfavour@example.com
 license = MIT
 license_files = LICENSE.txt
 long_description = file: README.rst
-long_description_content_type = text/x-rst; charset=UTF-8
-url = https://github.com/pyscaffold/pyscaffold/
-# Add here related links, for example:
+long_description_content_type = text/x-rst
+url = https://github.com/nathfavour/shitposter3
 project_urls =
-    Documentation = https://pyscaffold.org/
+    Documentation = https://shitposter3.readthedocs.io/
 #    Source = https://github.com/pyscaffold/pyscaffold/
 #    Changelog = https://pyscaffold.org/en/latest/changelog.html
 #    Tracker = https://github.com/pyscaffold/pyscaffold/issues
@@ -31,25 +31,38 @@ platforms = any
 classifiers =
     Development Status :: 4 - Beta
     Programming Language :: Python
-
+    Programming Language :: Python :: 3
+    Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3.10
 
 [options]
 zip_safe = False
 packages = find_namespace:
 include_package_data = True
 package_dir =
-    =src
-
-# Require a min/specific Python version (comma-separated conditions)
-# python_requires = >=3.8
+    = src
+python_requires = >=3.8
 
 # Add here dependencies of your project (line-separated), e.g. requests>=2.2,<3.0.
 # Version specifiers like >=2.2,<3.0 avoid problems due to API changes in
 # new major versions. This works if the required packages follow Semantic Versioning.
 # For more information, check out https://semver.org/.
 install_requires =
-    importlib-metadata; python_version<"3.8"
-
+    pytesseract>=0.3.10
+    pillow>=10.0.0
+    python-xlib>=0.33
+    pynput>=1.7.6
+    requests>=2.31.0
+    fastapi>=0.104.0
+    uvicorn>=0.24.0
+    python-multipart>=0.0.6
+    mss>=9.0.1
+    numpy>=1.24.0
+    opencv-python>=4.8.0
+    python-dotenv>=1.0.0
+    aiohttp>=3.9.0
+    click>=8.0.0
 
 [options.packages.find]
 where = src
@@ -68,15 +81,8 @@ testing =
     pytest-cov
 
 [options.entry_points]
-# Add here console scripts like:
-# console_scripts =
-#     script_name = shitposter3.module:function
-# For example:
-# console_scripts =
-#     fibonacci = shitposter3.skeleton:run
-# And any other entry points, for example:
-# pyscaffold.cli =
-#     awesome = pyscaffoldext.awesome.extension:AwesomeExtension
+console_scripts =
+    shitposter = shitposter3.cli.main:cli
 
 [tool:pytest]
 # Specify command line options as you would do when invoking pytest directly.
