--- a/requirements.txt
+++ b/requirements.txt
@@ -10,7 +10,9 @@ python-dotenv>=1.0.0
 aiohttp>=3.9.0
 urllib3>=1.26.17
 websockets>=12.0
-click
-psutil
+click>=8.0.0
+psutil>=5.8.0
 pyautogui
 tk
+pytesseract>=0.3.8
+Pillow>=8.0.0
